--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "html-react-parser": "^5.2.2",
     "linkify-react": "^4.2.0",
     "linkifyjs": "^4.2.0",
-    "next": "^14.2.3",
+    "next": "^14.2.25",
     "next-sitemap": "^4.2.3",
     "quill-image-resize-module-react": "^3.0.0",
     "react": "^18",
@@ -41,7 +41,7 @@
     "@types/react-dom": "^18",
     "@types/stompjs": "^2.3.9",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
+    "eslint-config-next": "^14.2.25",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
